[gd_scene load_steps=3 format=3 uid="uid://ck5w8h6yjn2dp"]

[ext_resource type="Script" uid="uid://dq4bxedgekjyw" path="res://Scripts/Components/ProfileDisplay.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 0.0
expand_margin_top = 0.0
expand_margin_right = 0.0
expand_margin_bottom = 0.0

[node name="ProfileDisplay" type="PanelContainer"]
custom_minimum_size = Vector2(300, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContentLayout" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProfileAvatar" type="TextureRect" parent="MarginContainer/ContentLayout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoLayout" type="VBoxContainer" parent="MarginContainer/ContentLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProfileName" type="Label" parent="MarginContainer/ContentLayout/InfoLayout"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Player Name"

[node name="ProfileLevel" type="Label" parent="MarginContainer/ContentLayout/InfoLayout"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Level 1"

[node name="ClickHint" type="Label" parent="MarginContainer/ContentLayout/InfoLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Click to view profile"
